--- a/app/views/layouts/gear_items.html.erb
+++ b/app/views/layouts/gear_items.html.erb
@@ -7,7 +7,8 @@
     <li><%=link_to 'retired items', gear_items_path(:retired => true) %></li>
 	</ul>
 	<%= form_tag gear_items_path, :method => 'get' do %>
-		<p><%=label_tag :type, 'filter by item type:' %> 
+		<p>
+		filter by item type: <br />
 		<%=select_tag(:type, 
 			options_from_collection_for_select(GearItemType.all_sorted, 'id', 'name', @type), 
 			{:prompt => 'filter by type', :onchange => '$(this).closest("form").submit();'})
