--- a/app/views/gear_items/show.html.erb
+++ b/app/views/gear_items/show.html.erb
@@ -5,12 +5,15 @@
 
 <%=form_for @gear_item do |f|%>
 <table class="data">
-<tr><th>type</th><td><%=@gear_item.gear_item_type.name %></td></tr>
+<tr><th>type</th><td>
+<%=f.select :gear_item_type_id, GearItemType.all_sorted.map{|git| [git.name, git.id]} %>
+</td></tr>
 <tr><th>identifier</th><td><%=f.text_field :identifier %></td></tr>
 <tr><th>description</th><td><%=f.text_field :description %></td></tr>
 <tr><th>size</th><td><%=f.text_field :size %></td></tr>
 <tr><th>year purchased</td><td><%=f.text_field :year_purchased %></td></tr>
 <tr><th>missing</td><td><%=f.check_box :missing %></td></tr>
+<tr><th>broken</td><td><%=f.check_box :broken %></td></tr>
 <tr><th>status</th><td><%="rented to " + @gear_item.rented_to.name if @gear_item.rented %></td></tr>
 <tr><th>&nbsp;</th><td><%=f.submit 'update', :class => 'button' %></td></tr>
 </table>
