--- a/app/views/layouts/gear_items.html.erb
+++ b/app/views/layouts/gear_items.html.erb
@@ -1,15 +1,17 @@
 <% content_for :menu do %>
 	<ul>
 		<li><%=link_to 'entire inventory', gear_items_path %> </li>
-		<li><%=link_to 'missing items', gear_items_path(:missing => true) %> </li>
-		<li><%=link_to 'rented items', gear_items_path(:rented => true) %> </li>
-		<li><%=link_to 'overdue items', gear_items_path(:overdue => true) %></li>
-    <li><%=link_to 'retired items', gear_items_path(:retired => true) %></li>
+		<li><%=link_to 'missing items', gear_items_path(:filter => 'missing') %> </li>
+		<li><%=link_to 'broken items', gear_items_path(:filter => 'broken') %> </li>
+		<li><%=link_to 'rented items', gear_items_path(:filter => 'rented') %> </li>
+		<li><%=link_to 'overdue items', gear_items_path(:filter => 'overdue') %></li>
+    <li><%=link_to 'retired items', gear_items_path(:filter => 'retired') %></li>
 	</ul>
 	<%= form_tag gear_items_path, :method => 'get' do %>
 		<p>
 		filter by item type: <br />
-		<%=select_tag(:type, 
+		<%= hidden_field_tag :filter, 'type' %>
+		<%= select_tag(:data, 
 			options_from_collection_for_select(GearItemType.all_sorted, 'id', 'name', @type), 
 			{:prompt => 'filter by type', :onchange => '$(this).closest("form").submit();'})
 		%>
