--- a/app/views/layouts/rentals.html.erb
+++ b/app/views/layouts/rentals.html.erb
@@ -1,16 +1,16 @@
 
 <% content_for :menu do %>
 	<ul>
-		<li><%=link_to 'all rentals', rental_path(:id => nil, :all => true) %> </li>
-		<li><%=link_to 'current rentals', rental_path(:id => nil) %></li>
-		<li><%=link_to 'overdue rentals', rental_path(:id => nil, :overdue => true) %></li>
+		<li><%=link_to 'all rentals', rentals_path(:all => true) %> </li>
+		<li><%=link_to 'current rentals', rentals_path() %></li>
+		<li><%=link_to 'overdue rentals', rentals_path(:overdue => true) %></li>
 		<li><%=link_to 'export days rentals', download_rentals_path() %></li>
 	</ul>
-	<%= form_tag rental_path(:id => nil), :method => 'get' do %>
+	<%= form_tag rentals_path(), :method => 'get' do %>
 	<p><%= label_tag :search, 'search:' %> <%=text_field_tag :search %></p>
 	<% end %>
 
-	<%= form_tag rental_path(:id => nil), :method => 'get' do %>
+	<%= form_tag rentals_path(), :method => 'get' do %>
 		<p><%= label_tag :search_new, 'new rental:' %> <%=text_field_tag :search_new %></p>
 	<% end %>
 <% end %>
