--- a/app/views/layouts/deposits.html.erb
+++ b/app/views/layouts/deposits.html.erb
@@ -2,7 +2,7 @@
 <ul>
 <li><%= link_to 'all deposits', deposit_path %></li>
 </ul>
-<%= form_tag deposit_path(:id => nil), :method => 'get' do %>
+<%= form_tag deposits_path(), :method => 'get' do %>
 	<p><%= label_tag :search, 'find user:' %> <%=text_field_tag :search %></p>
 <% end %>
 <% end %>
