--- a/app/views/layouts/deposits.html.erb
+++ b/app/views/layouts/deposits.html.erb
@@ -1,8 +1,8 @@
 <% content_for :menu do %>
 <ul>
-<li><%= link_to 'all deposits', deposit_path %></li>
+<li><%= link_to 'all deposits', deposits_path %></li>
 </ul>
-<%= form_tag deposits_path(), :method => 'get' do %>
+<%= form_tag deposits_path, :method => 'get' do %>
 	<p><%= label_tag :search, 'find user:' %> <%=text_field_tag :search %></p>
 <% end %>
 <% end %>
