update live() to on() to conform with js1.9

--- a/app/views/rentals/_form.html.erb
+++ b/app/views/rentals/_form.html.erb
@@ -119,7 +119,7 @@ $('#club_trip').change(function() {
 	update_total_costs();
 });
 
-$('select.watch').live('change', function(event) {
+$(document).on('change','select.watch', function(event) {
 	var val = $(this).val();
 	$(this).parents('div.rental_item_form:first').find('select.update').html(options_lookup[val]);
 
