--- a/app/views/ledgers/index.html.erb
+++ b/app/views/ledgers/index.html.erb
@@ -24,9 +24,10 @@
 
 <h4>Totals</h4>
 <table class="data">
-  <tr><th>deposited today</th><td>$<%=Ledger.deposits_taken_today%></td></tr>
-  <tr><th>fees taken today</th><td>$<%=Ledger.fees_taken_today%></td></tr>
-  <tr><th>deposits returned today</th><td>$<%=Ledger.deposits_returned_today%></td></tr>
+  <tr><th>deposits taken</th><td>$<%=@totals[:deposits]%></td></tr>
+  <tr><th>deposits returned</th><td>$<%=@totals[:returns]%></td></tr>
+  <tr><th>fees taken</th><td>$<%=@totals[:fees]%></td></tr>
+  <tr><th>other payments</th><td>$<%=@totals[:other]%></td></tr>
 </table>
 <p>
 
