--- a/app/views/ledgers/index.html.erb
+++ b/app/views/ledgers/index.html.erb
@@ -1,4 +1,11 @@
-<h3>Ledger</h3>
+<h3>Ledger (<%=date_format(@from)%> to <%=date_format(@to)%>)</h3>
+<div id="custom" style="display: none">
+	<%= form_tag ledgers_path, :method => 'get' do %>
+		<p><%= label_tag :start, 'start:' %> <%=select_date Time.now.beginning_of_day, :prefix => 'custom_start'  %></p>
+		<p><%= label_tag :end, 'end:' %> <%=select_date((Time.now.tomorrow), :prefix => 'custom_end') %></p>
+		<p><%= submit_tag 'submit' %></p>
+	<% end %>
+</div>
 
 <div id="manual" style="display: none">
   <h4>Manual Payment</h4>
