--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -45,7 +45,7 @@
 	</p>
 	<p>
 		<%=label_tag :approver, 'approver:' %>
-		<%= f.collection_select :approver_id, User.admins, :id, :name %> 
+		<%= f.collection_select :approver_id, admins, :id, :name %> 
 
 		<%= f.submit 'Submit' %>
 	</p>
