Display 'Unknown User' if an item is marked as rented, but doesn't have any actual rental against it (this can happen and breaks the page, we should upgrade the status on those items).

--- a/app/views/gear_item_types/_form.html.erb
+++ b/app/views/gear_item_types/_form.html.erb
@@ -22,7 +22,7 @@
   			<td><%=g.gear_item_type.name %></td>
   			<td><%=g.identifier %></td>
   			<td><%=g.description %></td>
-  			<td><%=(g.rented)?(g.rented_to.name):('') %></td>
+  			<td><%=g.rented_to_name%></td>
   			<td><%='yes' if g.missing %></td>
   			<td>
           <%=link_to 'more', gear_item_path(g) %> |
