Use a proper th closing tag rather than td for the over due rentals table header

--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -31,7 +31,11 @@
 <table class="data" id="rentals">
   <thead>
     <tr>
-      <th>name</th><th>#rentals</th><th>#current rentals</th><th>#overdue rentals</td><th>status</th>
+      <th>name</th>
+      <th>#rentals</th>
+      <th>#current rentals</th>
+      <th>#overdue rentals</th>
+      <th>status</th>
   </thead>
   <% @users.each do |u| %>
   <tr>
