--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -31,15 +31,17 @@
 <table class="data" id="rentals">
   <thead>
     <tr>
-      <th>name</th>
-      <th>#rentals</th>
-      <th>#current rentals</th>
-      <th>#overdue rentals</th>
-      <th>status</th>
+      <th>Name</th>
+      <th>Membership Years</th>
+      <th>#Rentals</th>
+      <th>#Current rentals</th>
+      <th>#Overdue rentals</th>
+      <th>Status</th>
   </thead>
   <% @users.each do |u| %>
   <tr>
     <td> <%= link_to u.name, new_rental_path(:user_id => u.id) %></td>
+    <td><%= u.membership_years != nil ? u.membership_years : 'Not a member' %></td>
     <td><%= u.rentals.size %></td>
     <td><%= u.rental_number %></td>
     <td><%= u.overdue_rental_number %></td>
