--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,42 +1,54 @@
-<h3>User "<%=@user.name %>"</h3>
+<h3>User "<%= @user.name %>"</h3>
 
 <table class="data">
-<tr><th>name</th><td><%=@user.name %></td></tr>
-<tr><th>email</th><td><%=@user.mail %></td></tr>
-<tr><th>phone</th><td><%=@user.phone %></td></tr>
-<tr><th><%=link_to '#rentals', rentals_path(:search => @user.name) %></th><td><%=@user.rentals.count%></td></tr>
-<tr><th>#current rentals</th><td><%=@user.rental_number%></td></tr>
-<tr><th>#overdue rentals</th><td><%=@user.overdue_rental_number %></td></tr>
+  <tr>
+    <th>Name</th><td><%= @user.name %></td>
+  </tr>
+  <tr>
+    <th>Email</th><td><%= @user.mail %></td>
+  </tr>
+  <tr>
+    <th>Phone</th><td><%= @user.phone %></td>
+  </tr>
+  <tr>
+    <th>Membership Years</th><td><%= @user.membership_years_display %></td>
+  </tr>
+  <tr>
+    <th><%= link_to '#Rentals', rentals_path(:search => @user.name) %></th><td><%= @user.rentals.count%></td>
+  </tr>
+  <tr>
+    <th>#Current Rentals</th><td><%= @user.rental_number%></td>
+  </tr>
+  <tr>
+    <th>#Overdue Rentals</th><td><%= @user.overdue_rental_number %></td>
+  </tr>
 </table>
-
 
 <h3>Notes</h3>
 <% if @user.user_notes.size == 0 %>
-  This user has no notes
+This user has no notes
 <% else %>
 <table class="data">
   <thead>
     <tr>
-      <th>note</th>
-      <th>approver</th>
+      <th>Note</th>
+      <th>Approver</th>
     </tr>
   </thead>
   <% @user.user_notes.each do |note| %>
-    <tr>
-      <td><%=note.note%></td>
-      <td><%=note.approver.name %></td>
-  <% end %>
+  <tr>
+    <td><%= note.note%></td>
+    <td><%= note.approver.name %></td>
+    <% end %>
 </table>
 <% end %>
-
 
 <h3>Add Note</h3>
 <%=form_for @note do |f| %>
 <p>
-<%=f.hidden_field :user_id %>
-<%=f.text_field :note %>
-<%=f.collection_select :approver_id, admins, 'id', 'name' %> <%=submit_tag 'add note' %>
+  <%= f.hidden_field :user_id %>
+  <%= f.text_field :note %>
+  <%= f.collection_select :approver_id, admins, 'id', 'name' %> <%= submit_tag 'add note' %>
 </p>
 <% end %>
-
 
