--- a/app/views/ledgers/index.html.erb
+++ b/app/views/ledgers/index.html.erb
@@ -1,10 +1,10 @@
 <h3>Ledger (<%=date_format(@from)%> to <%=date_format(@to)%>)</h3>
 <div id="custom" style="display: none">
-	<%= form_tag ledgers_path, :method => 'get' do %>
-		<p><%= label_tag :start, 'start:' %> <%=select_date Time.now.beginning_of_day, :prefix => 'custom_start'  %></p>
-		<p><%= label_tag :end, 'end:' %> <%=select_date((Time.now.tomorrow), :prefix => 'custom_end') %></p>
-		<p><%= submit_tag 'submit' %></p>
-	<% end %>
+  <%= form_tag ledgers_path, :method => 'get' do %>
+    <p><%= label_tag :start, 'start:' %> <%=select_date Time.now.beginning_of_day, :prefix => 'custom_start'  %></p>
+    <p><%= label_tag :end, 'end:' %> <%=select_date((Time.now.tomorrow), :prefix => 'custom_end') %></p>
+    <p><%= submit_tag 'submit' %></p>
+  <% end %>
 </div>
 
 <div id="manual" style="display: none">
@@ -60,13 +60,11 @@
   </tr>
 </thead>
 
-
-
 <% tally = @balance %>
 
 <tr><th><%= @from%></td><td>&nbsp;</td><td>&nbsp;</td><td>opening balance</td><td>&nbsp;</td><td>$<%=@balance %></td></tr>
 <% @entries.each do |entry| %>
-<% tally += entry.amount %>
+<% tally += (entry.amount == nil ? 0 : entry.amount) %>
 <tr>
   <th><%=entry.created_at %></td>
   <td><%=entry.approver.name %></td>
